<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.worldpay.demoapp.activity.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextCardHolder"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/card_holder_hint" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextCardNumber"
                android:layout_below="@+id/editTextCardHolder"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/card_number_hint"
                android:inputType="number" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextCVC"
                android:hint="@string/cvc_hint"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/encrypt_button_title"
                android:id="@+id/buttonEncrypt"
                android:layout_below="@+id/editTextCVC"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_alignRight="@+id/linearLayout"
                android:layout_alignEnd="@+id/linearLayout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextEncryptedData"
                android:layout_below="@+id/buttonEncrypt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:layout_marginTop="44dp"
                android:layout_alignParentBottom="false"
                android:gravity="top"
                android:layout_alignRight="@+id/buttonEncrypt"
                android:layout_alignEnd="@+id/buttonEncrypt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/encrypted_data_title"
                android:id="@+id/textView"
                android:layout_below="@+id/buttonEncrypt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/linearLayout"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextCardNumber"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/expiry_date"
                    android:id="@+id/textView3"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextExpiryMonth"
                    android:hint="@string/expiry_month_hint"
                    android:gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/expiry_date_sep"
                    android:id="@+id/textViewSep"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextExpiryYear"
                    android:hint="@string/expiry_year_hint"
                    android:gravity="center_horizontal" />
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>